# sensei

./: .coveragerc  .flake8  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci-pipeline.yml  publish-package.yml  python-publish.yml
docs/: index.md  people.md
docs/api_documentation/: api_model.md  case_converters.md  index.md  manager.md  parameters.md  rate_limit.md  router.md
docs/css/: style.css
docs/js/: script.js
docs/learn/: concurrency_parallelism.md  http_requests.md  index.md  learn.md  type_hints.md
docs/learn/user_guide/: first_steps.md  making_aliases.md  managing_requests.md  motivation.md  oop_style.md  params_response.md  preparers_finalizers.md  routed_model.md
docs/overrides/: main.html
docs/reference/: index.md  routed_function.md
sensei/: __init__.py  _base_client.py  _descriptors.py  _params.py  _utils.py  api_model.py  cases.py  params_functions.py  types.py
sensei/_internal/: __init__.py
sensei/_internal/_core/: __init__.py  _callable_handler.py  _case_converters.py  _compat.py  _endpoint.py  _hook.py  _params.py  _params_parser.py  _requester.py  _route.py  _types.py  api_model.py  args.py  params_functions.py  router.py
sensei/_internal/tools/: __init__.py  chained_map.py  types.py  utils.py
sensei/client/: __init__.py  client.py  exceptions.py  manager.py  rate_limiter.py
tests/: base_user.py  conftest.py  mock_api.py  test_api_model.py  test_async.py  test_cases.py  test_chained_map.py  test_client.py  test_router.py  test_sync.py  test_validation.py
tests/mock_api/: api.py  mock_dataset.py
tests/test_sync/: conftest.py  test_base.py
