[tool.poetry]
name = 'sensei'
version = '0.1.0.rc4'
description = 'The python framework, providing quick way to build API wrappers. Build painless API Requests with minimal implementation'
authors = ['Alexey  <axbelenkov@gmail.com>']
license = 'MIT'
readme = 'README.md'
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    'Framework :: Pydantic',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Typing :: Typed'
]
packages = [{ include = 'sensei' }]

[project.urls]
homepage = "https://sensei.factorycroco.com"
documentation = "https://sensei.factorycroco.com"
source = "https://github.com/CrocoFactory/sensei"
download = "https://pypi.org/project/sensei/#files"
tracker = "https://github.com/CrocoFactory/sensei/issues"


[tool.poetry.dependencies]
python = '^3.9'
typing-extensions = "^4.12.2"
httpx = "^0.27.2"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
build = "^1.2.1"
twine = "^5.1.1"
flake8 = "^7.1.1"
respx = "^0.21.1"
pyjwt = "^2.9.0"
email-validator = "^2.2.0"
coverage = "^7.6.1"
pytest-asyncio = "^0.24.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.39"
mdx-include = "^1.4.2"
markdown-include-variants = "^0.0.2"

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
